tests/macros/float/plugin.rs
fn main() {
    let q = inquisition::questions![float { plugin: todo!() }];
}
